--- a/contact.html
+++ b/contact.html
@@ -14,8 +14,19 @@
   <link rel="stylesheet" href="css/animate.css">
 </head>
 <!-- Begin MailChimp Signup Form -->
-
-</style>
+  <!--Start of Tawk.to Script-->
+  <script type="text/javascript">
+  var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+  (function(){
+  var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+  s1.async=true;
+  s1.src='https://embed.tawk.to/5948e97050fd5105d0c81e76/default';
+  s1.charset='UTF-8';
+  s1.setAttribute('crossorigin','*');
+  s0.parentNode.insertBefore(s1,s0);
+  })();
+  </script>
+  <!--End of Tawk.to Script-->
 <nav class="navbar navbar-inverse navbar-fixed-top">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
@@ -26,17 +37,18 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#"><img src="image/logo.png" class="logo"></a>
+      <a class="navbar-brand" href="index.html"><img src="image/logo.png" class="logo"></a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#" class="trans"> Home</a></li>
-        <li><a href="#" class="trans">Gallery</a></li>
-        <li><a href="#" class="trans">Featured Vibandas</a></li>
-        <li><a href="#" class="trans">Our Team</a></li>
-        <li><a href="#" class="trans">Contact Us</a></li>
+        <li><a href="index.html" class="trans"> Home</a></li>
+        <li><a href="gallery.html" class="trans">Gallery</a></li>
+        <li><a href="feature.html" class="trans">Featured Vibandas</a></li>
+        <li><a href="team.html" class="trans">Our Team</a></li>
+        <li><a href="contact.html" class="trans">Contact Us</a></li>
+        <li><a href="maps.html" class="trans">Maps</a></li>
       </ul>
     </div>
     <!-- /.navbar-collapse -->
@@ -49,25 +61,25 @@
   <div class="row">
     <div class="col-md-6">
       <div class="" id="fb">
-        <a href="#"><i class="fa fa-facebook fa-4x in me wow fadeInLeft" data-wow-duration="1s"></i></a>
+        <a href="https://www.facebook.com/Kibandaski-Finder-144646036101296/"><i class="fa fa-facebook fa-4x in me wow fadeInLeft" data-wow-duration="1s"></i></a>
       </div>
 
     </div>
     <div class="col-md-6">
       <div class="twitter">
-        <a href="#"><i class="fa fa-twitter fa-4x in wow fadeInRight" data-wow-duration="1s"></i> </a>
+        <a href="https://twitter.com/kibandaski2_0"><i class="fa fa-twitter fa-4x in wow fadeInRight" data-wow-duration="1s"></i> </a>
       </div>
     </div>
   </div>
   <div class="row">
     <div class="col-md-6">
       <div class="" id="linkedin">
-        <a href="#"><i class="fa fa-linkedin fa-4x in wow fadeInLeft" data-wow-duration="1s" data-wow-delay="1s"></i> </a>
+        <a href="https://www.linkedin.com/in/kibandaski-finder-179a06145/"><i class="fa fa-linkedin fa-4x in wow fadeInLeft" data-wow-duration="1s" data-wow-delay="1s"></i> </a>
       </div>
     </div>
     <div class="col-md-6 wow">
       <div class="pinterest">
-        <a href="#"><i class="fa fa-pinterest fa-4x in wow fadeInRight" data-wow-duration="1s" data-wow-delay="1s"></i> </a>
+        <a href="https://www.pinterest.com/kibandaskifinder/pins/"><i class="fa fa-pinterest fa-4x in wow fadeInRight" data-wow-duration="1s" data-wow-delay="1s"></i> </a>
       </div>
     </div>
   </div>
@@ -123,6 +135,7 @@
 <script type="text/javascript" src="js/wow.min.js"></script>
 <script src="js/send.js"></script>
 <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script>
+
 
 
 <script>
