Changes in the vibanda page

--- a/team.html
+++ b/team.html
@@ -32,7 +32,7 @@
         <ul class="nav navbar-nav navbar-right">
           <li><a href="index.html" class="trans"> Home</a></li>
           <li><a href="gallery.html" class="trans">Gallery</a></li>
-          <li><a href="feature.html" class="trans">Featured Vibandas</a></li>
+          <li><a href="vibandas.html" class="trans">Featured Vibandas</a></li>
           <li><a href="team.html" class="trans">Our Team</a></li>
           <li><a href="contact.html" class="trans">Contact Us</a></li>
           <li><a href="maps.html" class="trans">Maps</a></li>
