--- a/vibandas.html
+++ b/vibandas.html
@@ -88,8 +88,15 @@
                             </ul>
                         </div>
                         <div class="col-md-8">
-                            <h1>Customer reviews</h1>
+                            <h1> reviews</h1>
+                            <div class="content">
 
+                            </div>
+                            <div id="message">
+                              <textarea rows="2" cols="30">Leave your review</textarea>
+                              <button class="btn btn-lg btn-success">Post</button>
+                            </div>
+			
                         </div>
                       </div>
                       <div class="modal-footer">
@@ -156,31 +163,224 @@
                 </div>
             </div>
             <div class="col-md-4 wow fadeInRight" data-wow-duration="1s" data-wow-delay="1s">
+							<a href="#" data-toggle="modal" data-target="#myModal2">
                 <div class="thumbnail vib">
                     <h1>Kimothos</h1>
                     <img src="image/k2.jpg" class="kib">
                     <h2>Location:<a href="maps.html"> Westlands</a></h2>
                 </div>
+								<!-- Modal -->
+                <div class="modal fade" id="myModal2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+                  <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                      <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                        <h4 class="modal-title" id="myModalLabel">Kimothos</h4>
+                      </div>
+                      <div class="modal-body">
+                        <div class="col-md-4">
+                            <h1>Breakfast</h1>
+                            <ul>
+                                <li>Chai: kes 20</li>
+                                <li>Mandazi: kes 20</li>
+                                <li>Samosa: kes 40</li>
+                            </ul>
+                            <h1>Lunch</h1>
+                            <ul>
+                                <li>Pilau: kes 80</li>
+                                <li>Beef stew: kes 150</li>
+                                <li>Spaghetti: kes 50</li>
+                            </ul>
+                            <h1>Supper</h1>
+                            <ul>
+                                <li>Pilau: kes 80</li>
+                                <li>Beef stew: kes 150</li>
+                                <li>Spaghetti: kes 50</li>
+                            </ul>
+                        </div>
+                        <div class="col-md-8">
+                            <h1> reviews</h1>
+                            <div class="content">
+
+                            </div>
+                            <div id="message">
+                              <textarea rows="2" cols="30">Leave your review</textarea>
+                              <button class="btn btn-lg btn-success">Post</button>
+                            </div>
+			
+                        </div>
+                      </div>
+                      <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                      </div>
+                    </div>
+                  </div>
+                </div>
             </div>
             <div class="col-md-4 wow fadeInLeft" data-wow-duration="1s" data-wow-delay="2s">
                 <div class="thumbnail vib">
+									<a href="#" data-toggle="modal" data-target="#myModal3">
                     <h1>Milcah Restuarant</h1>
                     <img src="image/k3.jpg" class="kib">
                     <h2>Location:<a href="maps.html"> Community</a></h2>
                 </div>
+																<!-- Modal -->
+								<div class="modal fade" id="myModal3" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+                  <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                      <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                        <h4 class="modal-title" id="myModalLabel">Milcah Restuarant</h4>
+                      </div>
+                      <div class="modal-body">
+                        <div class="col-md-4">
+                            <h1>Breakfast</h1>
+                            <ul>
+                                <li>Chai: kes 20</li>
+                                <li>Mandazi: kes 20</li>
+                                <li>Samosa: kes 40</li>
+                            </ul>
+                            <h1>Lunch</h1>
+                            <ul>
+                                <li>Pilau: kes 80</li>
+                                <li>Beef stew: kes 150</li>
+                                <li>Spaghetti: kes 50</li>
+                            </ul>
+                            <h1>Supper</h1>
+                            <ul>
+                                <li>Pilau: kes 80</li>
+                                <li>Beef stew: kes 150</li>
+                                <li>Spaghetti: kes 50</li>
+                            </ul>
+                        </div>
+                        <div class="col-md-8">
+                            <h1> reviews</h1>
+                            <div class="content">
+
+                            </div>
+                            <div id="message">
+                              <textarea rows="2" cols="30">Leave your review</textarea>
+                              <button class="btn btn-lg btn-success">Post</button>
+                            </div>
+			
+                        </div>
+                      </div>
+                      <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
             </div>
-            <div class="col-md-4 wow fadeInRight" data-wow-duration="1s" data-wow-delay="2s">
+            <div class="col-md-4">
+							<a href="#" data-toggle="modal" data-target="#myModal4">
                 <div class="thumbnail vib">
-                    <h1>Mama Oliech</h1>
+                    <h1>Lala Court</h1>
                     <img src="image/k5.jpg" class="kib">
                     <h2>Location:<a href="maps.html"> Hurlingham</a></h2>
                 </div>
+								<!--Modal-->
+								<div class="modal fade" id="myModal4" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+                  <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                      <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                        <h4 class="modal-title" id="myModalLabel">Lala Court</h4>
+                      </div>
+                      <div class="modal-body">
+                        <div class="col-md-4">
+                            <h1>Breakfast</h1>
+                            <ul>
+                                <li>Chai: kes 20</li>
+                                <li>Mandazi: kes 20</li>
+                                <li>Samosa: kes 40</li>
+                            </ul>
+                            <h1>Lunch</h1>
+                            <ul>
+                                <li>Pilau: kes 80</li>
+                                <li>Beef stew: kes 150</li>
+                                <li>Spaghetti: kes 50</li>
+                            </ul>
+                            <h1>Supper</h1>
+                            <ul>
+                                <li>Pilau: kes 80</li>
+                                <li>Beef stew: kes 150</li>
+                                <li>Spaghetti: kes 50</li>
+                            </ul>
+                        </div>
+                        <div class="col-md-8">
+                            <h1> reviews</h1>
+                            <div class="content">
+
+                            </div>
+                            <div id="message">
+                              <textarea rows="2" cols="30">Leave your review</textarea>
+                              <button class="btn btn-lg btn-success">Post</button>
+                            </div>
+			
+                        </div>
+                      </div>
+                      <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                      </div>
+                    </div>
+                  </div>
+                </div>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-4 wow fadeInRight"  data-wow-duration="1s" data-wow-delay="2s">
+							<a href="#" data-toggle="modal" data-target="#myModal5">
                 <div class="thumbnail vib">
-                    <h1>Mama Oliech</h1>
+                    <h1>Mama kim's</h1>
                     <img src="image/k6.jpg" class="kib">
                     <h2>Location:<a href="maps.html"> Hurlingham</a></h2>
+                </div>
+								<!--Modal-->
+								<div class="modal fade" id="myModal5" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+                  <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                      <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                        <h4 class="modal-title" id="myModalLabel">Mama Kims</h4>
+                      </div>
+                      <div class="modal-body">
+                        <div class="col-md-4">
+                            <h1>Breakfast</h1>
+                            <ul>
+                                <li>Chai: kes 20</li>
+                                <li>Mandazi: kes 20</li>
+                                <li>Samosa: kes 40</li>
+                            </ul>
+                            <h1>Lunch</h1>
+                            <ul>
+                                <li>Pilau: kes 80</li>
+                                <li>Beef stew: kes 150</li>
+                                <li>Spaghetti: kes 50</li>
+                            </ul>
+                            <h1>Supper</h1>
+                            <ul>
+                                <li>Pilau: kes 80</li>
+                                <li>Beef stew: kes 150</li>
+                                <li>Spaghetti: kes 50</li>
+                            </ul>
+                        </div>
+                        <div class="col-md-8">
+                            <h1> reviews</h1>
+                            <div class="content">
+
+                            </div>
+                            <div id="message">
+                              <textarea rows="2" cols="30">Leave your review</textarea>
+                              <button class="btn btn-lg btn-success">Post</button>
+                            </div>
+			
+                        </div>
+                      </div>
+                      <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                      </div>
+                    </div>
+                  </div>
                 </div>
             </div>
         </div>
