--- a/vibandas.html
+++ b/vibandas.html
@@ -43,6 +43,7 @@
         <div class="jumbotron">
              <h1>Featured Vibandas</h1>
         </div>
+				<h5>Note that you play only once</h5>
         <button type="submit" id="random" class="btn btn-lg btn-default wow bounce" data-wow-iteration="infinite">Play for Free Lunch</button>
           <div class="container-fluid">
     <div id="display" class="wow bounce" style="text-align: center">
